Fixed links in nav not showing in capitais.html

--- a/lab6/capitais.css
+++ b/lab6/capitais.css
@@ -29,7 +29,7 @@ nav a {
 
 
 nav a:link {
-    color: white;
+    color: rgb(255, 0, 255);
 }
 
 nav a:visited {
